# NeuralDamage

./: .env.example  .gitignore  LICENSE  README.md  compose.dev.yml  compose.yml  docker-compose.yml
.github/: release-drafter.yml
.github/workflows/: docker-publish-release.yaml  release-drafter.yml  setup-labels.yml
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/app/: config.py  database.py  main.py
backend/app/api/: auth.py  bots.py  chats.py  deps.py  users.py  ws.py
backend/app/models/: __init__.py  bot.py  chat.py  chat_member.py  message.py  reaction.py  user.py
backend/app/schemas/: bot.py  chat.py  message.py  user.py  ws.py
backend/app/services/: auth_service.py  bot_service.py  response_engine.py
backend/app/ws/: handlers.py  manager.py
backend/tests/: conftest.py  test_api.py  test_bot_service.py  test_response_engine.py
docs/: dev-setup.md
frontend/: Dockerfile  index.html  nginx.conf  package.json  playwright.config.ts  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/lib/: api.ts  auth.ts
frontend/tests/: chat.spec.ts  full-e2e.spec.ts
src/NeuralDamage.API/: Dockerfile  NeuralDamage.API.csproj  NeuralDamage.API.slnx  Program.cs
src/NeuralDamage.Application/: NeuralDamage.Application.csproj
src/NeuralDamage.Domain/: BaseEntity.cs  Bot.cs  Chat.cs  ChatMember.cs  Message.cs  Reaction.cs  User.cs
src/NeuralDamage.Frontend/: CLAUDE.md  README.md  angular.json  openapitools.json  package.json  tsconfig.json
src/NeuralDamage.Infrastructure/: NeuralDamage.Infrastructure.csproj  NeuralDamageDbContext.cs
(+267 files in other folders)
